{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 576,
  "lineage": "abf38788-f2c4-0dcc-a8dc-35882b372848",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:555208043478:security-group/sg-0f4ca676b9c63704d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4ca676b9c63704d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210118161959864400000002",
            "name_prefix": "",
            "owner_id": "555208043478",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-071d77760acd724cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "43.241.120.3/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3892642564",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f4ca676b9c63704d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:555208043478:vpc/vpc-071d77760acd724cc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0882e431067b52707",
            "default_route_table_id": "rtb-04d28e9736590bce0",
            "default_security_group_id": "sg-08415291a7667a7ef",
            "dhcp_options_id": "dopt-c668b9ad",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-071d77760acd724cc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04d28e9736590bce0",
            "owner_id": "555208043478",
            "tags": {
              "Name": "vpc"
            }
          }
        }
      ]
    }
  ]
}